--- a/examples/vm_scheduling/rule_based_algorithm/config.yml
+++ b/examples/vm_scheduling/rule_based_algorithm/config.yml
@@ -4,7 +4,8 @@ env:
   start_tick: 0
   durations: 8638
   resolution: 1
-  seed: 666
+  seed: 777
+  # start_tick: 1000
 
 algorithm:
   # Random
@@ -16,14 +17,22 @@ algorithm:
   # args:
 
   # BestFit
-  # type: best_fit.BestFit
-  # args:
-    # metric_type: "remaining_cpu_cores"
+  type: best_fit.BestFit
+  args:
+    metric_type: "remaining_cpu_cores_and_energy_consumption"
 
   # Round Robin
-  type: round_robin.RoundRobin
-  args:
+  # type: round_robin.RoundRobin
+  # args:
 
   # Bin packing
   # type: bin_packing.BinPacking
+  # args:
+
+  # DQN
+  # type: dqn.DQNLauncher
+  # args:
+
+  # AC
+  # type: ac.ACLauncher
   # args:
